prevent flickering of drag event by disabling droplabel pointer events
code cleanup

--- a/src/styles/DropZone.scss
+++ b/src/styles/DropZone.scss
@@ -22,4 +22,7 @@
   border: 2px dotted $main-color;
   white-space: nowrap;
   overflow: hidden;
+  .droplabel {
+    pointer-events: none;
+  }
 }
